--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "devDependencies": {
-    "@saas/prettier": "workspace:*",
     "@saas/eslint-config": "workspace:*",
+    "@saas/prettier": "workspace:*",
     "@saas/tsconfig": "workspace:*"
   },
   "eslintConfig": {
@@ -14,5 +14,9 @@
       "@saas/eslint-config/base"
     ]
   },
-  "prettier": "@saas/prettier"
+  "prettier": "@saas/prettier",
+  "dependencies": {
+    "@casl/ability": "^6.7.5",
+    "zod": "^4.2.1"
+  }
 }
